--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,6 @@
-
-
-
 /* <!-- added by Daniel BEGIN --> */
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Electrolize&family=Lato:wght@300&display=swap');
 
 :root {
   --primary-color: #047aed;
@@ -14,6 +11,47 @@
   --error-color: #d9534f;
 }
 
+/* added by Daniel END */
+
+/* add by Áxil BEGIN */
+
+h1 {
+  color: #fff;
+  font-size: 50px;
+  font-family: 'Audiowide', cursive;
+  position: absolute;
+  right: 0px;
+}
+
+.navbar {
+  background-color: var(--primary-color);
+  color: #fff;
+  height: 70px;
+  font-size: 20px;
+  font-family: 'Electrolize', sans-serif;
+}
+
+.navbar ul {
+  display: flex;
+}
+
+.navbar a {
+  color: #fff;
+  padding: 10px;
+  margin: 0 5px;
+}
+
+.navbar a:hover {
+  border-bottom: 2px #fff solid;
+}
+
+.navbar .flex {
+  justify-content: space-between;
+}
+
+/*add by Áxil END*/ 
+
+/*added by Daniel BEGIN*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -35,8 +73,8 @@ a {
   color: #333;
 }
 
-h1,
-h2 {
+h2,
+h3 {
   font-weight: 300;
   line-height: 1.2;
   margin: 10px 0;
@@ -70,7 +108,7 @@ pre {
   position: relative;
 }
 
-.showcase h1 {
+.showcase h2 {
   font-size: 40px;
 }
 
