--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* <!-- added by Daniel BEGIN --> */
 
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Electrolize&family=Lato:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Electrolize&family=Lato:wght@300&display=swap");
 
 :root {
   --primary-color: #047aed;
@@ -18,7 +18,7 @@
 h1 {
   color: #fff;
   font-size: 50px;
-  font-family: 'Audiowide', cursive;
+  font-family: "Audiowide", cursive;
   position: absolute;
   right: 0px;
 }
@@ -28,7 +28,7 @@ h1 {
   color: #fff;
   height: 70px;
   font-size: 20px;
-  font-family: 'Electrolize', sans-serif;
+  font-family: "Electrolize", sans-serif;
 }
 
 .navbar ul {
@@ -49,7 +49,7 @@ h1 {
   justify-content: space-between;
 }
 
-/*add by Áxil END*/ 
+/*add by Áxil END*/
 
 /*added by Daniel BEGIN*/
 * {
@@ -59,7 +59,7 @@ h1 {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #333;
   line-height: 1.6;
 }
@@ -141,8 +141,8 @@ pre {
   margin: 30px 0;
 }
 
-.showcase-form input[type='text'],
-.showcase-form input[type='email'] {
+.showcase-form input[type="text"],
+.showcase-form input[type="email"] {
   border: 0;
   border-bottom: 1px solid #b4becb;
   width: 100%;
@@ -156,7 +156,7 @@ pre {
 
 .showcase::before,
 .showcase::after {
-  content: '';
+  content: "";
   position: absolute;
   height: 100px;
   bottom: -70px;
@@ -276,13 +276,32 @@ pre {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.1);
   }
-  
+
   .showcase-form {
     width: 300px;
   }
 }
 
 /* <!-- added by Daniel END --> */
+/* added by Momain, ourservice part */
 
+.stats {
+  padding-top: 100px;
+  animation: slideInFromBottom 1s ease-in;
+}
 
+.stats-heading {
+  max-width: 500px;
+  margin: auto;
+}
+.stats .grid h2 {
+  font-size: 50px;
+}
+.stats .grid h3 {
+  font-size: 35px;
+}
 
+.stats .grid p {
+  font-size: 20px;
+  font-weight: bold;
+}
